adicionando código sql

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
       "start": "node server.js"
     },
     "dependencies": {
-      "express": "^4.16.3"
+      "express": "^4.16.3",
+      "body-parser": "*",
+      "mysql":"*"
     },
     "engines": {
       "node": "10.x"
